--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,18 @@
         <title>CoolbyChatApp</title>
     </head>
     <body>
-        <h1 >Hello World</h1>
+        <h1 >Coolest Chat App By [ () () |_ ß y</h1>
+
+        <ol id="messages"></ol>
+
+        <form id="message-form">
+            <input type="text" name="message" placeholder="What is it that you say?">
+            <input type="submit" name="" value="Send">
+        </form>
 
         <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
         <script type="text/javascript" src="/js/index.js"></script>
     </body>
 </html>
