--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,24 @@
     <head>
         <meta charset="utf-8">
         <title>CoolbyChatApp</title>
+        <style media="screen">
+            input {
+                width: 100%;
+                display: block;
+            }
+        </style>
     </head>
     <body>
         <h1 >Coolest Chat App By [ () () |_ ß y</h1>
 
-        <ol id="messages"></ol>
 
         <form id="message-form">
+            <input type="text" name="username" placeholder="What is your imaginary name?">
             <input type="text" name="message" placeholder="What is it that you say?">
             <input type="submit" name="" value="Send">
         </form>
+
+        <ol id="messages"></ol>
 
         <script type="text/javascript" src="/socket.io/socket.io.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
