--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
             <input type="text" name="message" autocomplete="off" required placeholder="What is it that you say?">
             <div class="buttons">
                 <button type="button" name="location">Send Location</button>
-                <input class="send" type="submit" name="" value="Send">
+                <button type="submit" form="message-form" value="Submit">Send</button>
             </div>
         </form>
         <h4>Messages:</h4>
