--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,6 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
         <script type="text/javascript" src="/js/index.js"></script>
+        <script type="text/javascript" src="/js/moment.js"></script>
     </body>
 </html>
