--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
         <form id="message__form">
             <div id="message__box">
-                <ul id="messages"><li>Please enter a name</li></ul>
+                <ul id="messages"></ul>
             </div>
             <div id="input__buttons">
                 <button type="submit" name="set__name">Set Username</button>
@@ -23,12 +23,34 @@
             </div>
         </form>
         <h1>By [ () () |_ ß y</h1>
-
+        <script id="message-template" type="text/template">
+            <li class="message__item">
+                <div>
+                    <span><strong>{{from}}:</strong></span>
+                    <span> {{time}}</span>
+                </div>
+                <div>
+                    <span>{{text}}</span>
+                </div>
+            </li>
+        </script>
+        <script id="location-template" type="text/template">
+            <li class="message__item">
+                <div>
+                    <span><strong>{{from}}: </strong></span>
+                    <span> {{time}}</span>
+                </div>
+                <div class="location__msg">
+                    <span> >> <a href="{{url}}" target="_blank"><strong>{{from}}</strong> is currently here</a> << </span>
+                </div>
+            </li>
+        </script>
 
         <script type="text/javascript" src="/socket.io/socket.io.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
         <script type="text/javascript" src="/js/index.js"></script>
         <script type="text/javascript" src="/js/moment.js"></script>
+        <script type="text/javascript" src="/js/mustache.js"></script>
     </body>
 </html>
