Add fullscreen fixed chatbox

--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,15 @@
         <link rel="stylesheet" href="/css/master.css">
     </head>
     <body>
-        <h1 >Coolest Chat App</h1>
+        <h1>Coolest Chat App</h1>
 
 
         <form id="message__form">
-            <div id="message__box">
-                <ul id="messages"></ul>
-            </div>
+
+            <div id="message__box"></div>
+
             <div id="input__buttons">
-                <button type="submit" name="set__name">Set Username</button>
+                <button type="submit" name="set__name">Launch chat</button>
             </div>
             <div id="input__field">
                 <input type="text" class="hidden" name="message" autocomplete="off" required placeholder="What is it that you say?">
