Add Users class and online tab for desktop

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
         <link rel="stylesheet" href="/css/master.css">
     </head>
     <body class="center__content">
+        <div id="user__list" class="user__list__class">
+            <div>
+                Online
+            </div>
+            <div></div>
+        </div>
         <form id="enter__chat">
             <h1>Coolest Chat App</h1>
 
@@ -19,12 +25,11 @@
         </form>
 
         <form id="message__form">
-
             <div id="message__box"></div>
 
             <div id="input__buttons">
                 <button type="button" name="location">Send Location</button>
-                <button type="submit" name="send__message__button" value="Submit">Send</button>
+                <button type="submit" value="Submit">Send</button>
             </div>
             <div id="input__field">
                 <input type="text" name="message" autocomplete="off" required placeholder="What is it that you say?">
