--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/css/master.css">
     </head>
     <body class="center__content">
-        <div id="user__list" class="user__list__class">
+        <div id="user__list" class="user__list__class hidden">
             <div>
                 Online
             </div>
