--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
             <div id="input__buttons">
                 <button type="button" name="location">Send Location</button>
-                <button type="submit" value="Submit">Send</button>
+                <button type="submit" value="Submit" name="send__message__button">Send</button>
             </div>
             <div id="input__field">
                 <input type="text" name="message" autocomplete="off" required placeholder="What is it that you say?">
